--- a/Data_processing/Training/1x3-race_day.ipynb
+++ b/Data_processing/Training/1x3-race_day.ipynb
@@ -41,7 +41,13 @@
     "        # convert the image pixels to a numpy array\n",
     "        image = img_to_array(image)\n",
     "        # get image id + labels\n",
-    "        value = int(name.split('_')[0])\n",
+    "        value = name.split('_')[0]\n",
+    "        if value == 'C':\n",
+    "            value = 1\n",
+    "        elif value == 'G':\n",
+    "            value = 0\n",
+    "        elif value == 'D':\n",
+    "            value = 2\n",
     "        labels.append(value)\n",
     "        images.append(image)\n",
     "    return images, labels"
@@ -63,11 +69,11 @@
    ],
    "source": [
     "# load images from both train and test groups\n",
-    "directory = '../data/Dataset-1x3/Train'\n",
+    "directory = '../data/Dataset-race/Train'\n",
     "images, labels = load_photos(directory)\n",
     "nb_images = len(images)\n",
     "print('Loaded Images and labels for training: %d' % nb_images)\n",
-    "directory = '../data/Dataset-1x3/Val'\n",
+    "directory = '../data/Dataset-race/Val'\n",
     "images_val, labels_val = load_photos(directory)\n",
     "nb_images_val = len(images_val)\n",
     "print('Loaded Images and labels for validation: %d' % nb_images_val)"
@@ -83,10 +89,10 @@
    "source": [
     "#normalise datas\n",
     "images = np.array(images)\n",
-    "images = images[:, 50:, :, :]\n",
+    "images = images[:, :, :, :]\n",
     "images /= 255\n",
     "images_val = np.array(images_val)\n",
-    "images_val = images_val[:, 50:, :, :]\n",
+    "images_val = images_val[:, :, :, :]\n",
     "images_val /= 255"
    ]
   },
@@ -675,7 +681,7 @@
    "source": [
     "K.clear_session()\n",
     "\n",
-    "img_in = Input(shape=(78, 160, 3), name='img_in')\n",
+    "img_in = Input(shape=(128, 160, 3), name='img_in')\n",
     "\n",
     "x = img_in\n",
     "\n",
@@ -979,7 +985,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save('model-1x3.h5')"
+    "model.save('model-race.h5')"
    ]
   },
   {
@@ -1001,7 +1007,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from keras.models import load_model\n",
+    "model = load_model('test_model.h5')"
+   ]
   }
  ],
  "metadata": {
