Signed-off-by: Klhnikov Riton <parisot.eric.mail@gmail.com>

--- a/Data_processing/Training/1x3-croped.ipynb
+++ b/Data_processing/Training/1x3-croped.ipynb
@@ -54,11 +54,11 @@
    ],
    "source": [
     "# load images from both train and test groups\n",
-    "directory = '../data/BigDataset/Train'\n",
+    "directory = '../../../Patate_data/data/BigDataset/Train'\n",
     "images, labels = load_photos(directory)\n",
     "nb_images = len(images)\n",
     "print('Loaded Images and labels for training: %d' % nb_images)\n",
-    "directory = '../data/BigDataset/Val'\n",
+    "directory = '../../../Patate_data/data/BigDataset/Val'\n",
     "images_val, labels_val = load_photos(directory)\n",
     "nb_images_val = len(images_val)\n",
     "print('Loaded Images and labels for validation: %d' % nb_images_val)"
@@ -947,7 +947,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
