--- a/Data_processing/Training/1x[3-3]-MH.ipynb
+++ b/Data_processing/Training/1x[3-3]-MH.ipynb
@@ -67,11 +67,11 @@
     "        images.append(image)\n",
     "    return images, labels, names\n",
     "# load images from both train and test groups\n",
-    "directory = '../data/'+rich_big+'Dataset/Train'\n",
+    "directory = '../../../Patate_data/data/'+rich_big+'Dataset/Train'\n",
     "images, labels, names = load_photos(directory)\n",
     "nb_images = len(images)\n",
     "print('Loaded Images and labels for training: %d' % nb_images)\n",
-    "directory = '../data/'+rich_big+'Dataset/Val'\n",
+    "directory = '../../../Patate_data/data/'+rich_big+'Dataset/Val'\n",
     "images_val, labels_val, names_val = load_photos(directory)\n",
     "nb_images_val = len(images_val)\n",
     "print('Loaded Images and labels for validation: %d' % nb_images_val)\n",
@@ -112,11 +112,11 @@
     "        images.append(image)\n",
     "    return images, labels, names\n",
     "\n",
-    "directory_2 = '../data/'+rich_big+'Dataset-anticipation/Train'\n",
+    "directory_2 = '../../../Patate_data/data/'+rich_big+'Dataset-anticipation/Train'\n",
     "images_2, labels_2, names_2 = load_photos(directory_2)\n",
     "nb_images_2 = len(images_2)\n",
     "print('Loaded Images and labels for training: %d' % nb_images_2)\n",
-    "directory = '../data/'+rich_big+'Dataset-anticipation/Val'\n",
+    "directory = '../../../Patate_data/data/'+rich_big+'Dataset-anticipation/Val'\n",
     "images_val_2, labels_val_2, names_val_2 = load_photos(directory_2)\n",
     "nb_images_val_2 = len(images_val_2)\n",
     "print('Loaded Images and labels for validation: %d' % nb_images_val_2)\n",
@@ -1063,7 +1063,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
