--- a/Data_processing/Training/1x3-anticipation.ipynb
+++ b/Data_processing/Training/1x3-anticipation.ipynb
@@ -9,6 +9,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "C:\\Users\\Rock_\\Anaconda3\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
       "Using TensorFlow backend.\n"
      ]
     }
@@ -52,25 +54,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#dataset = 'Dataset_cleaned'\n",
+    "dataset = 'RichDataset'\n",
+    "#dataset = 'BigDataset'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded Images and labels for training: 794\n",
-      "Loaded Images and labels for validation: 82\n"
+      "Loaded Images and labels for training: 696\n",
+      "Loaded Images and labels for validation: 180\n"
      ]
     }
    ],
    "source": [
     "# load images from both train and test groups\n",
-    "directory = '../../../Patate_data/data/BigDataset-anticipation/Train'\n",
+    "directory = '../../../Patate_data/data/'+dataset+'-anticipation/Train'\n",
     "images, labels = load_photos(directory)\n",
     "nb_images = len(images)\n",
     "print('Loaded Images and labels for training: %d' % nb_images)\n",
-    "directory = '../../../Patate_data/data/BigDataset-anticipation/Val'\n",
+    "directory = '../../../Patate_data/data/'+dataset+'-anticipation/Val'\n",
     "images_val, labels_val = load_photos(directory)\n",
     "nb_images_val = len(images_val)\n",
     "print('Loaded Images and labels for validation: %d' % nb_images_val)"
@@ -295,16 +308,9 @@
     "x = img_in\n",
     "\n",
     "x = Conv2D(1, (3, 3), activation='relu', padding='same')(x)\n",
-    "#x = MaxPooling2D(pool_size=(2, 2), strides=(2,2))(x)\n",
-    "\n",
     "x = Conv2D(2, (3, 3), activation='relu', padding='same')(x)\n",
-    "#x = MaxPooling2D(pool_size=(2, 2), strides=(2,2))(x)\n",
-    "\n",
     "x = Conv2D(2, (3, 3), activation='relu', padding='same')(x)\n",
-    "#x = MaxPooling2D(pool_size=(2, 2), strides=(2,2))(x)\n",
-    "\n",
     "x = Conv2D(4, (3, 3), activation='relu', padding='same')(x)\n",
-    "#x = MaxPooling2D(pool_size=(2, 2), strides=(2,2))(x)\n",
     "\n",
     "flat = Flatten()(x)\n",
     "\n",
@@ -546,7 +552,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
