Signed-off-by: Klhnikov Riton <parisot.eric.mail@gmail.com>

--- a/Data_processing/Training/1x3-anticipation.ipynb
+++ b/Data_processing/Training/1x3-anticipation.ipynb
@@ -272,9 +272,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Rock_\\Anaconda3\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.models import Model, Sequential\n",
     "from keras.layers import *\n",
@@ -284,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -325,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -339,20 +349,30 @@
       "=================================================================\n",
       "img_in (InputLayer)          (None, 18, 160, 3)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_1 (Conv2D)            (None, 4, 40, 8)          392       \n",
+      "conv2d_1 (Conv2D)            (None, 3, 20, 2)          1538      \n",
       "_________________________________________________________________\n",
-      "conv2d_2 (Conv2D)            (None, 1, 10, 8)          1032      \n",
+      "dropout_1 (Dropout)          (None, 3, 20, 2)          0         \n",
       "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 80)                0         \n",
+      "conv2d_2 (Conv2D)            (None, 1, 3, 4)           2052      \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 20)                1620      \n",
+      "dropout_2 (Dropout)          (None, 1, 3, 4)           0         \n",
       "_________________________________________________________________\n",
-      "activation_1 (Activation)    (None, 20)                0         \n",
+      "conv2d_3 (Conv2D)            (None, 1, 1, 16)          16400     \n",
       "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 2)                 42        \n",
+      "dropout_3 (Dropout)          (None, 1, 1, 16)          0         \n",
+      "_________________________________________________________________\n",
+      "flatten_1 (Flatten)          (None, 16)                0         \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 10)                170       \n",
+      "_________________________________________________________________\n",
+      "activation_1 (Activation)    (None, 10)                0         \n",
+      "_________________________________________________________________\n",
+      "dropout_4 (Dropout)          (None, 10)                0         \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 5)                 55        \n",
       "=================================================================\n",
-      "Total params: 3,086\n",
-      "Trainable params: 3,086\n",
+      "Total params: 20,215\n",
+      "Trainable params: 20,215\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -547,13 +567,7 @@
       "721/721 [==============================] - 0s - loss: 0.1783 - acc: 0.9348     \n",
       "Epoch 87/400\n",
       "721/721 [==============================] - 0s - loss: 0.1605 - acc: 0.9348     \n",
-      "Epoch 88/400\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 88/400\n",
       "721/721 [==============================] - 0s - loss: 0.1759 - acc: 0.9293     \n",
       "Epoch 89/400\n",
       "721/721 [==============================] - 0s - loss: 0.1685 - acc: 0.9376     \n",
@@ -905,13 +919,7 @@
       "721/721 [==============================] - 0s - loss: 0.0027 - acc: 1.0000     \n",
       "Epoch 260/400\n",
       "721/721 [==============================] - 0s - loss: 0.0030 - acc: 1.0000     \n",
-      "Epoch 261/400\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 261/400\n",
       "721/721 [==============================] - 0s - loss: 0.0026 - acc: 1.0000     \n",
       "Epoch 262/400\n",
       "721/721 [==============================] - 0s - loss: 0.0026 - acc: 1.0000     \n",
@@ -1367,7 +1375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
