--- a/Data_processing/Training/1x[3-3]-MH.ipynb
+++ b/Data_processing/Training/1x[3-3]-MH.ipynb
@@ -734,8 +734,8 @@
     "\n",
     "x = img_in\n",
     "\n",
-    "x = Convolution2D(8, (4,4), strides=(4,4), activation='relu')(x)\n",
-    "x = Convolution2D(8, (4,4), strides=(4,4), activation='relu')(x)\n",
+    "x = Convolution2D(2, (4,4), strides=(4,4), activation='relu')(x)\n",
+    "x = Convolution2D(4, (4,4), strides=(4,4), activation='relu')(x)\n",
     "x = Convolution2D(8, (4,4), strides=(4,4), activation='relu')(x)\n",
     "#x = Convolution2D(128, (3,3), strides=(4,4), activation='relu')(x)\n",
     "\n",
@@ -903,13 +903,7 @@
       "1538/1538 [==============================] - 1s 496us/step - loss: 0.0563 - dense_3_loss: 0.0346 - dense_4_loss: 0.0217 - dense_3_acc: 0.9870 - dense_4_acc: 0.9922\n",
       "Epoch 46/200\n",
       "1538/1538 [==============================] - 1s 476us/step - loss: 0.0366 - dense_3_loss: 0.0177 - dense_4_loss: 0.0190 - dense_3_acc: 0.9948 - dense_4_acc: 0.9922\n",
-      "Epoch 47/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 47/200\n",
       "1538/1538 [==============================] - 1s 469us/step - loss: 0.0217 - dense_3_loss: 0.0137 - dense_4_loss: 0.0080 - dense_3_acc: 0.9954 - dense_4_acc: 0.9980\n",
       "Epoch 48/200\n",
       "1538/1538 [==============================] - 1s 474us/step - loss: 0.0245 - dense_3_loss: 0.0135 - dense_4_loss: 0.0110 - dense_3_acc: 0.9954 - dense_4_acc: 0.9967\n",
@@ -1099,13 +1093,7 @@
       "1538/1538 [==============================] - 1s 527us/step - loss: 0.0333 - dense_3_loss: 0.0155 - dense_4_loss: 0.0178 - dense_3_acc: 0.9954 - dense_4_acc: 0.9941\n",
       "Epoch 138/200\n",
       "1538/1538 [==============================] - 1s 539us/step - loss: 0.0293 - dense_3_loss: 0.0191 - dense_4_loss: 0.0102 - dense_3_acc: 0.9928 - dense_4_acc: 0.9961\n",
-      "Epoch 139/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 139/200\n",
       "1538/1538 [==============================] - 1s 506us/step - loss: 0.0234 - dense_3_loss: 0.0131 - dense_4_loss: 0.0103 - dense_3_acc: 0.9974 - dense_4_acc: 0.9974\n",
       "Epoch 140/200\n",
       "1538/1538 [==============================] - 1s 497us/step - loss: 0.0364 - dense_3_loss: 0.0261 - dense_4_loss: 0.0103 - dense_3_acc: 0.9902 - dense_4_acc: 0.9961\n",
