--- a/Data_processing/Training/5_directions_models.ipynb
+++ b/Data_processing/Training/5_directions_models.ipynb
@@ -42,7 +42,7 @@
     "    for name in dir_list:\n",
     "        filename = directory + '/' + name\n",
     "        # load an image from file\n",
-    "        image = load_img(filename, target_size=(128, 160))\n",
+    "        image = load_img(filename, target_size=(96, 192))\n",
     "        # convert the image pixels to a numpy array\n",
     "        image = img_to_array(image)\n",
     "        # get image id + labels\n",
@@ -210,7 +210,7 @@
     "K.clear_session()\n",
     "############################################################# Simple Dir Model  \n",
     "\n",
-    "img_in = Input(shape=(88, 160, 3), name='img_in')\n",
+    "img_in = Input(shape=(96, 192, 3), name='img_in')\n",
     "\n",
     "x = img_in\n",
     "\n",
@@ -279,7 +279,7 @@
     }
    ],
    "source": [
-    "h = model.fit(images[:, 40:, :, :], labels_dir, batch_size=128, epochs=20, verbose=1, validation_split=0.2)"
+    "h = model.fit(images, labels_dir, batch_size=128, epochs=20, verbose=1, validation_split=0.2)"
    ]
   },
   {
@@ -356,7 +356,7 @@
     "K.clear_session()\n",
     "############################################################# Simple Speed Model  \n",
     "\n",
-    "img_in = Input(shape=(18, 160, 3), name='img_in')\n",
+    "img_in = Input(shape=(18, 192, 3), name='img_in')\n",
     "\n",
     "x = img_in\n",
     "\n",
@@ -392,7 +392,7 @@
     }
    ],
    "source": [
-    "h = model.fit(images[:, 40:58, :, :], labels_speed, batch_size=128, epochs=20, verbose=1, validation_split=0.2)"
+    "h = model.fit(images[:, :78, :, :], labels_speed, batch_size=128, epochs=20, verbose=1, validation_split=0.2)"
    ]
   },
   {
@@ -424,7 +424,7 @@
     "K.clear_session()\n",
     "############################################################# Multitask Model  \n",
     "\n",
-    "img_in = Input(shape=(88, 160, 3), name='img_in')\n",
+    "img_in = Input(shape=(96, 192, 3), name='img_in')\n",
     "\n",
     "x = img_in\n",
     "\n",
@@ -446,7 +446,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "h = model.fit(images[:, 40:, :, :], [labels_speed, labels_dir], batch_size=128, epochs=20, verbose=1, validation_split=0.2)"
+    "h = model.fit(images, [labels_speed, labels_dir], batch_size=128, epochs=20, verbose=1, validation_split=0.2)"
    ]
   },
   {
