Signed-off-by: Klhnikov Riton <parisot.eric.mail@gmail.com>

--- a/Data_processing/Training/Prepare_ext_Datas.ipynb
+++ b/Data_processing/Training/Prepare_ext_Datas.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "C:\\Users\\Rock_\\Anaconda3\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
       "Using TensorFlow backend.\n"
      ]
     }
@@ -28,13 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load images from both train and test groups\n",
-    "data = np.load(\"../../../Patate_data/data/Datasets_Axionable/axionable_data/X_train_axio.npy\")\n",
-    "labelsd = np.load(\"../../../Patate_data/data/Datasets_Axionable/axionable_data/Y_train_axio.npy\")"
+    "#data = np.load(\"../../../../Datasets_Axionable/ironcar_data/old_track/balanced_iron_X.npy\")\n",
+    "#labelsd = np.load(\"../../../../Datasets_Axionable/ironcar_data/old_track/balanced_iron_Y.npy\")\n",
+    "data = np.load(\"../../../../Datasets_Axionable/ironcar_data/new_track/x_chicane.npy\")\n",
+    "labelsd = np.load(\"../../../../Datasets_Axionable/ironcar_data/new_track/y_chicane.npy\")"
    ]
   },
   {
@@ -46,14 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "\n",
     "for idx, image in enumerate(data):\n",
-    "    img_name = \"../../../Patate_data/data/Datasets_Axionable/ax_pics/\" + str(np.argmax(labelsd[idx])) + \"_\" + str(time.time()) + \".jpg\"\n",
+    "    img_name = \"../../../../Datasets_Axionable/ironcar_pics/\" + str(np.argmax(labelsd[idx])) + \"_\" + str(time.time()) + \".jpg\"\n",
     "    img = cv2.resize(image, dsize=(192, 96), interpolation=cv2.INTER_CUBIC)\n",
     "    cv2.imwrite(img_name, cv2.cvtColor(img, cv2.COLOR_RGB2BGR))\n"
    ]
