Signed-off-by: Klhnikov Riton <parisot.eric.mail@gmail.com>

--- a/Data_processing/Training/5_directions_models.ipynb
+++ b/Data_processing/Training/5_directions_models.ipynb
@@ -46,10 +46,10 @@
     "        # convert the image pixels to a numpy array\n",
     "        image = img_to_array(image)\n",
     "        # get image id + labels\n",
-    "        value_speed = int(name.split('_')[0])\n",
-    "        value_dir = int(name.split('_')[1])\n",
-    "        labels_speed.append(value_speed)\n",
+    "        value_dir = float(name.split('_')[0])\n",
+    "        value_speed = float(name.split('_')[1])\n",
     "        labels_dir.append(value_dir)\n",
+    "        labels_speed.append(value_speed)\n",
     "        images.append(image)\n",
     "    return images, labels_speed, labels_dir"
    ]
@@ -101,6 +101,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "if dataset == \"../../Pics/Auto5\":\n",
+    "    for i, label in enumerate(labels_speed):\n",
+    "        if label > 0.8:\n",
+    "            labels_speed[i] = 1\n",
+    "        else:\n",
+    "            labels_speed[i] = 0\n",
+    "    for i, label in enumerate(labels_dir):\n",
+    "        if label < -0.8:\n",
+    "            labels_speed[i] = 0\n",
+    "        elif label < -0.1:\n",
+    "            labels_speed[i] = 1\n",
+    "        elif label < 0.1:\n",
+    "            labels_speed[i] = 2\n",
+    "        elif label < 0.8:\n",
+    "            labels_speed[i] = 3\n",
+    "        else:\n",
+    "            labels_speed[i] = 4\n",
+    "\n",
     "#convert datas to dummyvalues\n",
     "labels_speed = np.array(pd.get_dummies(labels_speed))\n",
     "labels_dir = np.array(pd.get_dummies(labels_dir))"
