Signed-off-by: Klhnikov Riton <parisot.eric.mail@gmail.com>

--- a/Data_processing/Training/5_directions_models.ipynb
+++ b/Data_processing/Training/5_directions_models.ipynb
@@ -177,9 +177,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Rock_\\Anaconda3\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.models import Model, Sequential\n",
     "from keras.layers import *\n",
@@ -189,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -199,22 +209,22 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "img_in (InputLayer)          (None, 96, 160, 3)        0         \n",
+      "img_in (InputLayer)          (None, 64, 128, 3)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_1 (Conv2D)            (None, 12, 20, 6)         4614      \n",
+      "conv2d_1 (Conv2D)            (None, 8, 16, 6)          4614      \n",
       "_________________________________________________________________\n",
-      "dropout_1 (Dropout)          (None, 12, 20, 6)         0         \n",
+      "dropout_1 (Dropout)          (None, 8, 16, 6)          0         \n",
       "_________________________________________________________________\n",
-      "conv2d_2 (Conv2D)            (None, 2, 3, 12)          18444     \n",
+      "conv2d_2 (Conv2D)            (None, 1, 2, 12)          18444     \n",
       "_________________________________________________________________\n",
-      "dropout_2 (Dropout)          (None, 2, 3, 12)          0         \n",
+      "dropout_2 (Dropout)          (None, 1, 2, 12)          0         \n",
       "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 72)                0         \n",
+      "flatten_1 (Flatten)          (None, 24)                0         \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 5)                 365       \n",
+      "dense_1 (Dense)              (None, 5)                 125       \n",
       "=================================================================\n",
-      "Total params: 23,423\n",
-      "Trainable params: 23,423\n",
+      "Total params: 23,183\n",
+      "Trainable params: 23,183\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
