--- a/Data_processing/Training/Untitled.ipynb
+++ b/Data_processing/Training/Untitled.ipynb
@@ -2,23 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Rock_\\Anaconda3\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
-      "Using TensorFlow backend.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded Images and labels: 10616\n"
+      "Loaded Images and labels: 13539\n"
      ]
     }
    ],
@@ -53,7 +44,7 @@
     "        images.append(image)\n",
     "    return images, labels_speed, labels_dir\n",
     "\n",
-    "dataset = \"../../Pics/Auto5\"\n",
+    "dataset = \"../../Pics/Auto\"\n",
     "\n",
     "# load images from both train and test groups\n",
     "directory = '../../' + dataset\n",
@@ -65,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,16 +69,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(920, 3124, 2368, 3283, 921)"
+       "(1102, 4692, 1951, 4692, 1102)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
