--- a/Data_processing/Training/Check balance.ipynb
+++ b/Data_processing/Training/Check balance.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded Images and labels: 13539\n"
+      "Loaded Images and labels: 23466\n"
      ]
     }
    ],
@@ -44,7 +44,7 @@
     "        images.append(image)\n",
     "    return images, labels_speed, labels_dir\n",
     "\n",
-    "dataset = \"../../Pics/Auto\"\n",
+    "dataset = \"../../Balanced\"\n",
     "\n",
     "# load images from both train and test groups\n",
     "directory = '../../' + dataset\n",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,16 +69,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1102, 4692, 1951, 4692, 1102)"
+       "(2746, 5597, 5609, 6768, 2746)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
