Signed-off-by: eparisot <eparisot@student.42.fr>

--- a/Data_processing/Training/5_directions_models_Inception.ipynb
+++ b/Data_processing/Training/5_directions_models_Inception.ipynb
@@ -364,7 +364,31 @@
      "text": [
       "Train on 1181 samples, validate on 507 samples\n",
       "Epoch 1/10\n",
-      "1152/1181 [============================>.] - ETA: 13s - loss: 0.1597 - dense_5_loss: 0.0431 - dense_6_loss: 0.1166 - dense_5_acc: 0.9861 - dense_6_acc: 0.9609"
+      "1181/1181 [==============================] - 549s 465ms/step - loss: 0.1593 - dense_5_loss: 0.0432 - dense_6_loss: 0.1162 - dense_5_acc: 0.9865 - dense_6_acc: 0.9610 - val_loss: 0.9023 - val_dense_5_loss: 0.2400 - val_dense_6_loss: 0.6624 - val_dense_5_acc: 0.9211 - val_dense_6_acc: 0.8205\n",
+      "\n",
+      "Epoch 00001: val_loss did not improve\n",
+      "Epoch 2/10\n",
+      "1181/1181 [==============================] - 545s 462ms/step - loss: 0.1164 - dense_5_loss: 0.0329 - dense_6_loss: 0.0834 - dense_5_acc: 0.9881 - dense_6_acc: 0.9712 - val_loss: 0.8912 - val_dense_5_loss: 0.2803 - val_dense_6_loss: 0.6109 - val_dense_5_acc: 0.9191 - val_dense_6_acc: 0.8383\n",
+      "\n",
+      "Epoch 00002: val_loss did not improve\n",
+      "Epoch 3/10\n",
+      "1181/1181 [==============================] - 789s 668ms/step - loss: 0.1035 - dense_5_loss: 0.0326 - dense_6_loss: 0.0709 - dense_5_acc: 0.9898 - dense_6_acc: 0.9822 - val_loss: 0.6826 - val_dense_5_loss: 0.2122 - val_dense_6_loss: 0.4705 - val_dense_5_acc: 0.9369 - val_dense_6_acc: 0.8659\n",
+      "\n",
+      "Epoch 00003: val_loss improved from 0.69936 to 0.68261, saving model to model_school_insept_Bigger_5.h5\n",
+      "Epoch 4/10\n",
+      "1181/1181 [==============================] - 716s 607ms/step - loss: 0.0934 - dense_5_loss: 0.0249 - dense_6_loss: 0.0685 - dense_5_acc: 0.9941 - dense_6_acc: 0.9865 - val_loss: 0.9814 - val_dense_5_loss: 0.2842 - val_dense_6_loss: 0.6972 - val_dense_5_acc: 0.9112 - val_dense_6_acc: 0.8028\n",
+      "\n",
+      "Epoch 00004: val_loss did not improve\n",
+      "Epoch 5/10\n",
+      "1181/1181 [==============================] - 856s 725ms/step - loss: 0.0978 - dense_5_loss: 0.0324 - dense_6_loss: 0.0654 - dense_5_acc: 0.9915 - dense_6_acc: 0.9881 - val_loss: 0.8070 - val_dense_5_loss: 0.3173 - val_dense_6_loss: 0.4897 - val_dense_5_acc: 0.9112 - val_dense_6_acc: 0.8698\n",
+      "\n",
+      "Epoch 00005: val_loss did not improve\n",
+      "Epoch 6/10\n",
+      "1181/1181 [==============================] - 754s 638ms/step - loss: 0.0877 - dense_5_loss: 0.0206 - dense_6_loss: 0.0671 - dense_5_acc: 0.9941 - dense_6_acc: 0.9856 - val_loss: 0.7493 - val_dense_5_loss: 0.2594 - val_dense_6_loss: 0.4899 - val_dense_5_acc: 0.9290 - val_dense_6_acc: 0.8777\n",
+      "\n",
+      "Epoch 00006: val_loss did not improve\n",
+      "Epoch 7/10\n",
+      "  32/1181 [..............................] - ETA: 6:49 - loss: 0.0347 - dense_5_loss: 0.0121 - dense_6_loss: 0.0225 - dense_5_acc: 1.0000 - dense_6_acc: 1.0000"
      ]
     }
    ],
