Signed-off-by: Klhnikov Riton <parisot.eric.mail@gmail.com>

--- a/Data_processing/Training/5_directions_models_nvidia.ipynb
+++ b/Data_processing/Training/5_directions_models_nvidia.ipynb
@@ -460,8 +460,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#from keras.models import load_model\n",
-    "#model = load_model(\"../../model_multi_race5.h5\")"
+    "from keras.models import load_model\n",
+    "model = load_model(model_name)"
    ]
   },
   {
